<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton1"
        android:text="@string/ExampleText1"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton2"
        android:text="@string/ExampleText2"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton3"
        android:text="@string/ExampleText3"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton4"
        android:text="@string/ExampleText4"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton5"
        android:text="@string/ExampleText5"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton6"
        android:text="@string/ExampleText6"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton7"
        android:text="@string/ExampleText7"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ExampleButton8"
        android:text="@string/ExampleText8"
        style="@style/MainButtonStyle.bf">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>