<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainTitleTextView"
            android:text="@string/MainTextView"
            style="@style/MainTextViewStyle" />

        <EditText
            android:hint="@string/TextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/MainButton"
            android:text="@string/StartText"
            style="@style/MainButtonStyle" />

    </LinearLayout>
    <TextView
        android:id="@+id/creatorTextView"
        android:text="@string/Creator"
        style="@style/TextViewStyle.bolt"
        android:layout_marginBottom="16dp" />

</LinearLayout>