<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@color/orange"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">


        <TextView
            android:id="@+id/text_dialog"
            android:text="@string/correction"
            style="@style/TextViewStyle"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:text="@string/yes"
                style="@style/MainButtonStyle"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:text="@string/no"
                style="@style/MainButtonStyle"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
